# c-networking

./: .gitignore  README.md
CODE_SAMPLES/: .gitignore  CMakeLists.txt
CODE_SAMPLES/.cache/clangd/index/: getaddrinfo.c.7478E11D8E42697E.idx  pton.c.C86EB8CE20711195.idx
CODE_SAMPLES/src/: connect.c  getaddrinfo.c  gethostname.c  getpeername.c  listen.c  manual-socket-and-bind.c  pton.c  rafa-server.c  server.c  socket-and-bind.c  telnetserv.c
CODE_SAMPLES/src/followalong/: ch6-client.c  ch6-listener.c  ch6-server.c  ch6-talker.c
CODE_SAMPLES/src/playground/: c.c  review.c  s.c
NOTES/: NOTES_CH2_WHAT_IS_A_SOCKET.md  NOTES_CH3_IP_ADDRESSES.md  NOTES_CH5_SYSCALLS.md  NOTES_CH6_CLIENT_SERVER.md
